Use 'frame rate' and 'speed increase'

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,14 +1,19 @@
 err_generic=[TLBE::__1__] Error: __2__
 err_specific=[TLBE::__1__|__2__] Error: __3__
 
+tlbe-disabled=TLBE disabled
+err_interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
+
 [mod-setting-name]
 tlbe-enabled=Take screenshots
 tlbe-notices-enabled=Notifications
 tlbe-save-folder=Save location
-tlbe-screenshot-interval=Screenshot interval (ticks)
+tlbe-frame-rate=Frame rate
+tlbe-speed-increase=Speed increase
 
 [mod-setting-description]
 tlbe-enabled=Enables Timelapse Extended mod to take screenshots
 tlbe-notices-enabled=Notify player when a screenshot is taken
 tlbe-save-folder=Relative from 'User Data Directory'
-tlbe-screenshot-interval=A second has 60 ticks
+tlbe-frame-rate=Frame rate of final movie/output
+tlbe-speed-increase=Output speed gain compared to actual game
