Make image resolution configurable

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,6 +10,8 @@ tlbe-notices-enabled=Notifications
 tlbe-save-folder=Save location
 tlbe-frame-rate=Frame rate
 tlbe-speed-increase=Speed increase
+tlbe-resolution-x=Image width
+tlbe-resolution-y=Image height
 
 [mod-setting-description]
 tlbe-enabled=Enables Timelapse Extended mod to take screenshots
