Follow player when no builds are built (or disable taking screenshots)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,6 +12,7 @@ tlbe-frame-rate=Frame rate
 tlbe-speed-increase=Speed increase
 tlbe-resolution-x=Image width
 tlbe-resolution-y=Image height
+tlbe-follow-player=Follow player
 
 [mod-setting-description]
 tlbe-enabled=Enables Timelapse Extended mod to take screenshots
@@ -19,3 +20,4 @@ tlbe-notices-enabled=Notify player when a screenshot is taken
 tlbe-save-folder=Relative from 'User Data Directory'
 tlbe-frame-rate=Frame rate of final movie/output
 tlbe-speed-increase=Output speed gain compared to actual game
+tlbe-follow-player=Keep follow player until the first entity is built. When disabled TLBE is disabled until the first enitity is built.
