Prevent zooming out too much

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,6 +3,8 @@ err_specific=[TLBE::__1__|__2__] Error: __3__
 
 tlbe-disabled=TLBE disabled
 err_interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
+max-zoom=Max zoom reached, increase image size (or make base smaller)
+msg-once=This message will only show once!
 
 [mod-setting-name]
 tlbe-enabled=Take screenshots
