Fix luacheck issues
Using https://github.com/Nexela/Factorio-luacheckrc config

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,10 +1,11 @@
 err_generic=[TLBE::__1__] Error: __2__
 err_specific=[TLBE::__1__|__2__] Error: __3__
 
-tlbe-disabled=TLBE disabled
-err_interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
+err-interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
 max-zoom=Max zoom reached, increase image size (or make base smaller)
 msg-once=This message will only show once!
+screenshot-taken=Screenshot taken!
+tlbe-disabled=TLBE disabled
 
 [mod-setting-name]
 tlbe-enabled=Take screenshots
