Make zoom period configurable

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,3 @@
-err_generic=[TLBE::__1__] Error: __2__
-err_specific=[TLBE::__1__|__2__] Error: __3__
-
 err-interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
 max-zoom=Max zoom reached, increase image size (or make base smaller)
 msg-once=This message will only show once!
@@ -9,18 +6,20 @@ tlbe-disabled=TLBE disabled
 
 [mod-setting-name]
 tlbe-enabled=Take screenshots
-tlbe-notices-enabled=Notifications
-tlbe-save-folder=Save location
+tlbe-follow-player=Follow player
 tlbe-frame-rate=Frame rate
-tlbe-speed-increase=Speed increase
+tlbe-notices-enabled=Notifications
 tlbe-resolution-x=Image width
 tlbe-resolution-y=Image height
-tlbe-follow-player=Follow player
+tlbe-save-folder=Save location
+tlbe-speed-increase=Speed increase
+tlbe-zoom-period=Recenter base period
 
 [mod-setting-description]
 tlbe-enabled=Enables Timelapse Extended mod to take screenshots
+tlbe-follow-player=Keep follow player until the first entity is built. When disabled TLBE is disabled until the first enitity is built.
+tlbe-frame-rate=Frame rate of final movie/output
 tlbe-notices-enabled=Notify player when a screenshot is taken
 tlbe-save-folder=Relative from 'User Data Directory'
-tlbe-frame-rate=Frame rate of final movie/output
 tlbe-speed-increase=Output speed gain compared to actual game
-tlbe-follow-player=Keep follow player until the first entity is built. When disabled TLBE is disabled until the first enitity is built.
+tlbe-zoom-period=Time (seconds) it should take to recenter on the base
