--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -7,6 +7,7 @@ tlbe-disabled=TLBE disabled
 [mod-setting-name]
 tlbe-enabled=Take screenshots
 tlbe-follow-player=Follow player
+tlbe-follow-launch=Follow rocket launch
 tlbe-frame-rate=Frame rate
 tlbe-notices-enabled=Notifications
 tlbe-resolution-x=Image width
@@ -18,6 +19,7 @@ tlbe-zoom-period=Recenter base period
 [mod-setting-description]
 tlbe-enabled=Enables Timelapse Extended mod to take screenshots
 tlbe-follow-player=Keep follow player until the first entity is built. When disabled TLBE is disabled until the first enitity is built.
+tlbe-follow-launch=Zoom in when a rocket is being launched, afterwards zoom out to base again (when multiple rockets are launching, only first rocket is tracked)
 tlbe-frame-rate=Frame rate of final movie/output
 tlbe-notices-enabled=Notify player when a screenshot is taken
 tlbe-save-folder=Relative from 'User Data Directory'
