Warn player that base size is unknown when loaded into an existing game (#2)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,6 @@
 err-interval=You cannot capture more frames than the game playes at, increase 'Speed increase' or reduce 'Frame rate'
 max-zoom=Max zoom reached, increase image size (or make base smaller)
+mod-loaded=TBLE got loaded into an existing game, please build an entity in each corner of your base to specify its size
 msg-once=This message will only show once!
 screenshot-taken=Screenshot taken!
 tlbe-disabled=TLBE disabled
