Add TLBE button and (empty) settings frame

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -6,6 +6,9 @@ screenshot-taken=Screenshot taken!
 tlbe-disabled=TLBE disabled
 tlbe-enabled=TLBE is fired up to take screenshots of your base
 
+[controls]
+tlbe-main-window-close=Close Settings window
+
 [mod-setting-name]
 tlbe-enabled=Take screenshots
 tlbe-follow-player=Follow player
