--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 max-zoom=Max zoom reached, increase image size (or make base smaller)
-mod-loaded=TBLE got loaded into an existing game, please build an entity in each corner of your base to specify its dimensions
+mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 msg-once=This message will only show once!
 
 [controls]
