Replace top-left icon with a shortcut icon
Fixes #5

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,3 +10,6 @@ tlbe-save-folder=Save location
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
+
+[shortcut]
+tlbe=Time Lapse Base Edition
