Get rid of close shortcut
It is not adding value since we have the toggle shortcut as well

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,7 +3,7 @@ mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 msg-once=This message will only show once!
 
 [controls]
-tlbe-main-window-close=Close Settings window
+tlbe-main-window-toggle=Open/Close camera settings
 
 [mod-setting-name]
 tlbe-save-folder=Save location
