--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,41 @@
 max-zoom=Max zoom reached, increase image size (or make base smaller)
+migrated-camera=Migrated TLBE player settings to new camera settings.
+migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
+migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 msg-once=This message will only show once!
+tracker-base=Base Tracker
+tracker-player=Player Tracker
+tracker-rocket=Rocket Tracker
+
+[gui]
+button-base-recalculate=Recalculate base size
+frame-title=TLBE Settings
+label-camera-trackers=Trackers
+label-center=Center:
+label-framerate=Frame rate:
+label-name=Name:
+label-position=Position:
+label-resolution=Resolution:
+label-size=Size:
+label-speedgain=Speed gain:
+label-zoom=Zoom:
+label-zoomperiod=Zoom period:
+item-add-tracker=<Add Tracker>
+item-new-tracker=<New Tracker>
+tab-cameras=Cameras
+tab-trackers=Trackers
+value-unset=unset
+
+[tooltip]
+base-recalculate=Recalculate size of complete base for the selected tracker.
+camera-add=Create new camera,
+camera-delete=Delete selected camera.
+camera-delete-last=Cannot delete last camera.
+camera-enable=Enable/Disable camera taking screenshots.
+camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
+tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera)
+tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
