Show tracker type

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -19,6 +19,7 @@ label-position=Position:
 label-resolution=Resolution:
 label-size=Size:
 label-speedgain=Speed gain:
+label-type=Type:
 label-zoom=Zoom:
 label-zoomperiod=Zoom period:
 item-add-tracker=<Add Tracker>
