--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -18,6 +18,7 @@ label-name=Name:
 label-position=Position:
 label-resolution=Resolution:
 label-size=Size:
+label-smooth=Smooth camera movement
 label-speedgain=Speed gain:
 label-type=Type:
 label-zoom=Zoom:
@@ -35,8 +36,9 @@ camera-delete=Delete selected camera.
 camera-delete-last=Cannot delete last camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
-tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera)
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
+tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera)
+tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
