Add Area Tracker (#11)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -4,6 +4,8 @@ migration-issue-framerate=Could not recover 'frame rate', please set manually as
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 msg-once=This message will only show once!
+tag-not-found=Tag '__1__' not found on the map
+tracker-area=Area Tracker
 tracker-base=Base Tracker
 tracker-player=Player Tracker
 tracker-rocket=Rocket Tracker
@@ -11,6 +13,7 @@ tracker-rocket=Rocket Tracker
 [gui]
 button-base-recalculate=Recalculate base size
 frame-title=TLBE Settings
+label-bottom-left=Bottom/Left:
 label-camera-trackers=Trackers
 label-center=Center:
 label-framerate=Frame rate:
@@ -20,6 +23,7 @@ label-resolution=Resolution:
 label-size=Size:
 label-smooth=Smooth camera movement
 label-speedgain=Speed gain:
+label-top-right=Top/Right:
 label-type=Type:
 label-zoom=Zoom:
 label-zoomperiod=Zoom period:
@@ -41,6 +45,8 @@ tracker-cannot-delete-last=Cannot delete last tracker.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
 tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera)
+tracker-area-map=Use map marker with name '__1__' to fill in this corner.
+tracker-area-player=Use player coordinates to fill in this corner.
 tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
 
 [controls]
