Optionally show entity information in screenshots

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -16,6 +16,7 @@ frame-title=TLBE Settings
 label-bottom-left=Bottom/Left:
 label-camera-trackers=Trackers
 label-center=Center:
+label-entity-info=Show entity info
 label-framerate=Frame rate:
 label-name=Name:
 label-position=Position:
@@ -39,6 +40,7 @@ camera-add=Create new camera,
 camera-delete=Delete selected camera.
 camera-delete-last=Cannot delete last camera.
 camera-enable=Enable/Disable camera taking screenshots.
+camera-entity-info=Show entity information (recipes) in the screenshots.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-last=Cannot delete last tracker.
