Warn player(s) to enable camera on first (mod) start. (#16)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,6 +3,7 @@ migrated-camera=Migrated TLBE player settings to new camera settings.
 migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
+mod-loaded2=Remember to enable the TLBE camera to start taking screenshots.
 msg-once=This message will only show once!
 tag-not-found=Tag '__1__' not found on the map
 tracker-area=Area Tracker
