--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -52,6 +52,7 @@ tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
+tlbe-pause-cameras=Pause/Unpause all TLBE cameras
 
 [mod-setting-name]
 tlbe-save-folder=Save location
@@ -63,3 +64,4 @@ tlbe-sequential-names=Use sequential numbering per camera for the screenshot num
 
 [shortcut]
 tlbe=Time Lapse Base Edition
+tlbe-pause=Pause all TLBE cameras
