Improve max-zoom message and add tooltops for camera settings

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 camera-surface-deleted=Surface of camera '__1__' got deleted, camera will be disabled.
-max-zoom=Max zoom reached, increase image size (or make base smaller)
+max-zoom=Max zoom reached, increase screenshot/image resolution (or make base smaller)
 migrated-camera=Migrated TLBE player settings to new camera settings.
 migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
@@ -43,7 +43,10 @@ camera-add=Create new camera,
 camera-delete=Delete selected camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-entity-info=Show entity information (recipes) in the screenshots.
+camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
+camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
+camera-zoomperiod=Amount of the time takes to change the zoom level to the newly calculated values.
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
