--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,7 +1,10 @@
 camera-surface-deleted=Surface of camera '__1__' got deleted, camera will be disabled.
 max-zoom=Max zoom reached, increase screenshot/image resolution (or make base smaller)
 migrated-camera=Migrated TLBE player settings to new camera settings.
+migrated-transitiondata=Migrated TLBE player settings to new camera transition system.
 migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
+migration-issue-transitiondata1=There is an active camera transition. Transitions changed with this update and cannot be migrated to the new version.
+migration-issue-transitiondata2=Please finish the camera transition before updating to this version to prevent a broken transition in the video.
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 mod-loaded2=Remember to enable the TLBE camera to start taking screenshots.
