--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -35,7 +35,7 @@ label-top-right=Top/Right:
 label-type=Type:
 label-until-build=Follow until build
 label-zoom=Zoom:
-label-zoomperiod=Zoom period:
+label-transitionperiod=Transition period:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
 tab-cameras=Cameras
@@ -52,7 +52,7 @@ camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
-camera-zoomperiod=Amount of the time takes to change the zoom level to the newly calculated values.
+camera-transitionperiod=Amount of the time takes to transition the camera to its new position.
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
