Fix pausing during Camera transitions (#46)
Camera transition code got simplified/improved:
Now the Camera keeps track of the transition data, and the Tracker only signals that the target position/zoom factor has been changed. This fixes the issue with paused cameras causing jumps in the transition.

Additional changes:
* Fix issues with Luadoc (of related code) and cover more functions and types with documentation.
* Use transition(Period) instead of zoom(Period) to make more clear what this is about

Fixes #43

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,7 +1,10 @@
 camera-surface-deleted=Surface of camera '__1__' got deleted, camera will be disabled.
 max-zoom=Max zoom reached, increase screenshot/image resolution (or make base smaller)
 migrated-camera=Migrated TLBE player settings to new camera settings.
+migrated-transitiondata=Migrated TLBE player settings to new camera transition system.
 migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
+migration-issue-transitiondata1=There is an active camera transition. Transitions changed with this update and cannot be migrated to the new version.
+migration-issue-transitiondata2=Please finish the camera transition before updating to this version to prevent a broken transition in the video.
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 mod-loaded2=Remember to enable the TLBE camera to start taking screenshots.
@@ -32,7 +35,7 @@ label-top-right=Top/Right:
 label-type=Type:
 label-until-build=Follow until build
 label-zoom=Zoom:
-label-zoomperiod=Zoom period:
+label-transitionperiod=Transition period:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
 tab-cameras=Cameras
@@ -49,7 +52,7 @@ camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
-camera-zoomperiod=Amount of the time takes to change the zoom level to the newly calculated values.
+camera-transitionperiod=Amount of the time takes to transition the camera to its new position.
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
