Add toggle/shortcut to pause all cameras.
Fixes #38

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -66,6 +66,7 @@ tracker-wrong-surface=Tracker is disabled because tracker surface differs from c
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
 tlbe-pause-cameras=Pause/Unpause all TLBE cameras
+tlbe-take-screenshot=Take a screenshot
 
 [mod-setting-name]
 tlbe-save-folder=Save location
@@ -78,3 +79,4 @@ tlbe-sequential-names=Use sequential numbering per camera for the screenshot num
 [shortcut]
 tlbe=Time Lapse Base Edition
 tlbe-pause=Pause all TLBE cameras
+tlbe-screenshot=Take a screenshot using the selected camera
