--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -22,6 +22,7 @@ label-bottom-left=Bottom/Left:
 label-camera-trackers=Trackers
 label-center=Center:
 label-entity-info=Show entity info
+label-show-gui=Show GUI
 label-always-day=Always daytime
 label-framerate=Frame rate:
 label-name=Name:
@@ -48,6 +49,7 @@ camera-add=Create new camera,
 camera-delete=Delete selected camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-entity-info=Show entity information (recipes) in the screenshots.
+camera-show-gui=Show the GUI in the screenshots (make sure camera resolution and game/screen resolution match)
 camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
