Player-position-centering seems to work now.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -43,6 +43,7 @@ label-cityblock-offset=Offset:
 label-cityblock-block=Block:
 label-cityblock-currentblock=Current:
 label-cityblock-blockScale=Scale:
+label-cityblock-centerOnPlayer=Select block:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
 tab-cameras=Cameras
