Partial fix to the block scaling issue - it requires the user to press <enter> to commit a new value. Tooltip reflects this.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -81,7 +81,7 @@ tracker-cityblock-currentblock=The city block to focus on, counting in whole blo
 tracker-cityblock-currentblock-x=The position of the current city block, counting blocks rightwards.
 tracker-cityblock-currentblock-y=The position of the current city block, counting blocks downwards.
 tracker-cityblock-blockScale=How many city blocks to zoom out, centered on the current block.
-tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbours.
+tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbours. <enter> to set.
 tracker-cityblock-player=Use player coordinates to select the current city block.
 
 [controls]
