--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -73,10 +73,12 @@ tlbe-take-screenshot=Take a screenshot
 [mod-setting-name]
 tlbe-save-folder=Save location
 tlbe-sequential-names=Sequential names
+tlbe-show-stats=Show camera status
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
 tlbe-sequential-names=Use sequential numbering per camera for the screenshot numbers. When disabled, game ticks are used for screenshot numbering.
+tlbe-show-stats=This requires the Stats GUI mod to be loaded.
 
 [shortcut]
 tlbe=Time Lapse Base Edition
