Use colors and show amount of tick left during transitions

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -96,7 +96,7 @@ signal-target-south-east=South-east corner of the snapshot target
 signal-target-south-west=South-west corner of the snapshot target
 
 [stats]
-all-paused=All cameras paused
-disabled=Disabled
-transition=Transitioning
-recording=Recording
+all-paused=[color=1, 0.8, 0]All cameras paused[/color]
+disabled=[color=1,0,0]Disabled[/color]
+transition=[color=0, 0.75, 1]Transitioning (__1__ __plural_for_parameter_1_{1=tick|rest=ticks}__)[/color]
+recording=[color=0,1,0]Recording[/color]
