--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -37,6 +37,7 @@ label-type=Type:
 label-until-build=Follow until build
 label-zoom=Zoom:
 label-transitionperiod=Transition period:
+label-transition-speedgain=Transition speed gain:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
 tab-cameras=Cameras
@@ -55,6 +56,7 @@ camera-framerate=Number of frames per second that your movie is going to be (oft
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
 camera-transitionperiod=Amount of the time takes to transition the camera to its new position.
+camera-transition-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time during transitions.\n\nSet to 0 for stop-motion transitions (only possible with sequential numbering active). Note that depending on transition period, and your hardware, it might take a few game ticks (so not 100% stop-motion transition)
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
