--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -14,6 +14,7 @@ tracker-area=Area Tracker
 tracker-base=Base Tracker
 tracker-player=Player Tracker
 tracker-rocket=Rocket Tracker
+tracker-cityBlock=City Block Tracker
 
 [gui]
 button-base-recalculate=Recalculate base size
@@ -37,6 +38,12 @@ label-type=Type:
 label-until-build=Follow until build
 label-zoom=Zoom:
 label-transitionperiod=Transition period:
+label-cityblock-size=Block size:
+label-cityblock-offset=Offset:
+label-cityblock-block=Block:
+label-cityblock-currentblock=Current:
+label-cityblock-blockScale=Scale:
+label-cityblock-centerOnPlayer=Select block:
 label-transition-speedgain=Transition speed gain:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
@@ -66,6 +73,18 @@ tracker-area-player=Use player coordinates to fill in this corner.
 tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
 tracker-until-build=Follow the player until an entity is build.
 tracker-wrong-surface=Tracker is disabled because tracker surface differs from camera surface.
+tracker-cityblock-size=The size of a single city block in tiles.
+tracker-cityblock-size-x=The width of a single city block in tiles.
+tracker-cityblock-size-y=The height of a single city block in tiles.
+tracker-cityblock-offset=The number of tiles to shift the city blocks grid.
+tracker-cityblock-offset-x=The number of tiles right to shift the city blocks grid.
+tracker-cityblock-offset-y=The number of tiles down to shift the city blocks grid.
+tracker-cityblock-currentblock=The city block to focus on, counting in whole blocks.
+tracker-cityblock-currentblock-x=The position of the current city block, counting blocks rightwards.
+tracker-cityblock-currentblock-y=The position of the current city block, counting blocks downwards.
+tracker-cityblock-blockScale=How many city blocks to zoom out, centered on the current block.
+tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbours. <enter> to set.
+tracker-cityblock-player=Use player coordinates to select the current city block.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
