Fixed small grammar mistakes in locale.cfg

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,11 +1,11 @@
 camera-surface-deleted=Surface of camera '__1__' got deleted, camera will be disabled.
-max-zoom=Max zoom reached, increase screenshot/image resolution (or make base smaller)
+max-zoom=Max zoom reached, increase screenshot/image resolution (or make base smaller).
 migrated-camera=Migrated TLBE player settings to new camera settings.
 migrated-transitiondata=Migrated TLBE player settings to new camera transition system.
-migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
+migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before).
 migration-issue-transitiondata1=There is an active camera transition. Transitions changed with this update and cannot be migrated to the new version.
 migration-issue-transitiondata2=Please finish the camera transition before updating to this version to prevent a broken transition in the video.
-migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before)
+migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before).
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 mod-loaded2=Remember to enable the TLBE camera to start taking screenshots.
 msg-once=This message will only show once!
@@ -53,21 +53,21 @@ value-unset=unset
 
 [tooltip]
 base-recalculate=Recalculate size of complete base for the selected tracker.
-camera-add=Create new camera,
+camera-add=Create new camera.
 camera-delete=Delete selected camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-entity-info=Show entity information (recipes) in the screenshots.
-camera-show-gui=Show the GUI in the screenshots (make sure camera resolution and game/screen resolution match)
+camera-show-gui=Show the GUI in the screenshots (make sure camera resolution and game/screen resolution match).
 camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
-camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
+camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little).
 camera-transitionperiod=Amount of the time takes to transition the camera to its new position.
-camera-transition-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time during transitions.\n\nSet to 0 for stop-motion transitions (only possible with sequential numbering active). Note that depending on transition period, and your hardware, it might take a few game ticks (so not 100% stop-motion transition)
+camera-transition-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time during transitions.\n\nSet to 0 for stop-motion transitions (only possible with sequential numbering active). Note that depending on transition period, and your hardware, it might take a few game ticks (so not 100% stop-motion transition).
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
-tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera)
+tracker-enable=Enable/Disable tracker. (disabled trackers are skipped by the camera).
 tracker-area-map=Use map marker with name '__1__' to fill in this corner.
 tracker-area-player=Use player coordinates to fill in this corner.
 tracker-smooth=Enable/Disable smooth behavior of the camera when this tracker is active.
