Try to fix missing player data
In order to be more flexible to unexpected situations.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -6,6 +6,7 @@ migration-issue-framerate=Could not recover 'frame rate', please set manually as
 migration-issue-transitiondata1=There is an active camera transition. Transitions changed with this update and cannot be migrated to the new version.
 migration-issue-transitiondata2=Please finish the camera transition before updating to this version to prevent a broken transition in the video.
 migration-issue-zoomperiod=Could not recover 'zoom period', please set manually as soon as possible. (only rocket tracker will not work as before).
+migration-fix-missing-player-data=Inserted missing TLBE player data.
 mod-loaded=TBLE got loaded into an existing game, calculating base dimensions...
 mod-loaded2=Remember to enable the TLBE camera to start taking screenshots.
 msg-once=This message will only show once!
