--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -27,6 +27,7 @@ label-entity-info=Show entity info
 label-show-gui=Show GUI
 label-always-day=Always daytime
 label-framerate=Frame rate:
+label-interval=Interval:
 label-name=Name:
 label-position=Position:
 label-resolution=Resolution:
@@ -46,6 +47,7 @@ label-cityblock-currentblock=Current:
 label-cityblock-blockScale=Scale:
 label-cityblock-centerOnPlayer=Select block:
 label-transition-speedgain=Transition speed gain:
+label-transition-interval=Transition interval:
 item-add-tracker=<Add Tracker>
 item-new-tracker=<New Tracker>
 tab-cameras=Cameras
@@ -61,10 +63,12 @@ camera-entity-info=Show entity information (recipes) in the screenshots.
 camera-show-gui=Show the GUI in the screenshots (make sure camera resolution and game/screen resolution match).
 camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
+camera-interval=Interval (elapsed game time) between frames in milliseconds. (actual interval might be slightly off due to rounding to game ticks)
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little).
 camera-transitionperiod=Amount of the time takes to transition the camera to its new position.
 camera-transition-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time during transitions.\n\nSet to 0 for stop-motion transitions (only possible with sequential numbering active). Note that depending on transition period, and your hardware, it might take a few game ticks (so not 100% stop-motion transition).
+camera-transition-interval=Interval (elapsed game time) between frames in millisecond during transitions.\n\nSet to 0 for stop-motion transitions (only possible with sequential numbering active). Note that depending on transition period, and your hardware, it might take a few game ticks (so not 100% stop-motion transition).
 pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
@@ -84,7 +88,7 @@ tracker-cityblock-currentblock=The city block to focus on, counting in whole blo
 tracker-cityblock-currentblock-x=The position of the current city block, counting blocks rightwards.
 tracker-cityblock-currentblock-y=The position of the current city block, counting blocks downwards.
 tracker-cityblock-blockScale=How many city blocks to zoom out, centered on the current block.
-tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbours. <enter> to set.
+tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbors. <enter> to set.
 tracker-cityblock-player=Use player coordinates to select the current city block.
 
 [controls]
@@ -96,11 +100,13 @@ tlbe-take-screenshot=Take a screenshot
 tlbe-save-folder=Save location
 tlbe-sequential-names=Sequential names
 tlbe-show-stats=Show camera status
+tlbe-use-interval=Use interval as speed setting
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
 tlbe-sequential-names=Use sequential numbering per camera for the screenshot numbers. When disabled, game ticks are used for screenshot numbering.
 tlbe-show-stats=This requires the Stats GUI mod to be loaded.
+tlbe-use-interval=Use intervals (between frames) instead of speed gain in the camera settings. When this setting is changed, reopen camera settings to update the UI.
 
 [shortcut]
 tlbe=Time Lapse Base Edition
