--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -101,12 +101,14 @@ tlbe-save-folder=Save location
 tlbe-sequential-names=Sequential names
 tlbe-show-stats=Show camera status
 tlbe-use-interval=Use interval as speed setting
+tlbe-auto-record=Automatic recording
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
 tlbe-sequential-names=Use sequential numbering per camera for the screenshot numbers. When disabled, game ticks are used for screenshot numbering.
 tlbe-show-stats=This requires the Stats GUI mod to be loaded.
 tlbe-use-interval=Use intervals (between frames) instead of speed gain in the camera settings. When this setting is changed, reopen camera settings to update the UI.
+tlbe-auto-record=Start recording automatically with main camera on new game
 
 [shortcut]
 tlbe=Time Lapse Base Edition
