--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -102,6 +102,7 @@ tlbe-sequential-names=Sequential names
 tlbe-show-stats=Show camera status
 tlbe-use-interval=Use interval as speed setting
 tlbe-auto-record=Automatic recording
+tlbe-seed-subfolder=Map-Seed Subfolder
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
@@ -109,6 +110,7 @@ tlbe-sequential-names=Use sequential numbering per camera for the screenshot num
 tlbe-show-stats=This requires the Stats GUI mod to be loaded.
 tlbe-use-interval=Use intervals (between frames) instead of speed gain in the camera settings. When this setting is changed, reopen camera settings to update the UI.
 tlbe-auto-record=Start recording automatically with main camera on new game
+tlbe-seed-subfolder=Generate a subfolder for each map seed
 
 [shortcut]
 tlbe=Time Lapse Base Edition
