add ability to choose file format

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -102,7 +102,8 @@ tlbe-sequential-names=Sequential names
 tlbe-show-stats=Show camera status
 tlbe-use-interval=Use interval as speed setting
 tlbe-auto-record=Automatic recording
-tlbe-seed-subfolder=Map-Seed Subfolder
+tlbe-seed-subfolder=Map-Seed subfolder
+tlbe-save-format=Image format
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
@@ -111,6 +112,7 @@ tlbe-show-stats=This requires the Stats GUI mod to be loaded.
 tlbe-use-interval=Use intervals (between frames) instead of speed gain in the camera settings. When this setting is changed, reopen camera settings to update the UI.
 tlbe-auto-record=Start recording automatically with main camera on new game
 tlbe-seed-subfolder=Generate a subfolder for each map seed
+tlbe-save-format=Format of screenshot files
 
 [shortcut]
 tlbe=Time Lapse Base Edition
