Initial Cube Tracker implementation

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -16,6 +16,7 @@ tracker-base=Base Tracker
 tracker-player=Player Tracker
 tracker-rocket=Rocket Tracker
 tracker-cityBlock=City Block Tracker
+tracker-cube=Cube Tracker
 
 [gui]
 button-base-recalculate=Recalculate base size
@@ -90,6 +91,7 @@ tracker-cityblock-currentblock-y=The position of the current city block, countin
 tracker-cityblock-blockScale=How many city blocks to zoom out, centered on the current block.
 tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbors. <enter> to set.
 tracker-cityblock-player=Use player coordinates to select the current city block.
+tracker-cube-not-available=This tracker is not available because Ultracube mod is not loaded.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
