--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -40,6 +40,7 @@ label-top-right=Top/Right:
 label-type=Type:
 label-until-build=Follow until build
 label-zoom=Zoom:
+label-cube-padding=Cube padding:
 label-transitionperiod=Transition period:
 label-cityblock-size=Block size:
 label-cityblock-offset=Offset:
@@ -92,6 +93,7 @@ tracker-cityblock-blockScale=How many city blocks to zoom out, centered on the c
 tracker-cityblock-blockScale-value=A zoom of 3 will capture the current block and all of the neighbors. <enter> to set.
 tracker-cityblock-player=Use player coordinates to select the current city block.
 tracker-cube-not-available=This tracker is not available because Ultracube mod is not loaded.
+tracker-cube-padding=Padding (in tiles) applied around the cube area when multiple cubes are present.
 
 [controls]
 tlbe-main-window-toggle=Open/Close camera settings
