Optionally switch name and sequence number in screenshot filenames

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -102,6 +102,7 @@ tlbe-take-screenshot=Take a screenshot
 
 [mod-setting-name]
 tlbe-save-folder=Save location
+tlbe-save-name-first=Save files have name prefixed
 tlbe-sequential-names=Sequential names
 tlbe-show-stats=Show camera status
 tlbe-use-interval=Use interval as speed setting
@@ -111,6 +112,7 @@ tlbe-save-format=Image format
 
 [mod-setting-description]
 tlbe-save-folder=Relative from 'User Data Directory'
+tlbe-save-name-first=When enabled, save files will have the camera name before the sequence number.
 tlbe-sequential-names=Use sequential numbering per camera for the screenshot numbers. When disabled, game ticks are used for screenshot numbering.
 tlbe-show-stats=This requires the Stats GUI mod to be loaded.
 tlbe-use-interval=Use intervals (between frames) instead of speed gain in the camera settings. When this setting is changed, reopen camera settings to update the UI.
